seaqt/QtWidgets/gen_qdatetimeedit.h

typedef struct QActionEvent QActionEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDate QDate;
typedef struct QDateEdit QDateEdit;
typedef struct QDateTime QDateTime;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionSpinBox QStyleOptionSpinBox;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTime QTime;
typedef struct QTimeEdit QTimeEdit;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
void QDateTimeEdit_connect_dateTimeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDateTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_timeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_dateChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));
void QTimeEdit_connect_userTimeChanged(QTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
typedef struct VirtualQDateEdit VirtualQDateEdit;
void QDateEdit_connect_userDateChanged(QDateEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));
QMetaObject* QDateEdit_virtualbase_metaObject(const VirtualQDateEdit* self);
void* QDateEdit_virtualbase_metacast(VirtualQDateEdit* self, const char* param1);
int QDateEdit_virtualbase_metacall(VirtualQDateEdit* self, int param1, int param2, void** param3);
QSize* QDateEdit_virtualbase_sizeHint(const VirtualQDateEdit* self);
void QDateEdit_virtualbase_clear(VirtualQDateEdit* self);
void QDateEdit_virtualbase_stepBy(VirtualQDateEdit* self, int steps);
bool QDateEdit_virtualbase_event(VirtualQDateEdit* self, QEvent* event);
void QDateEdit_virtualbase_keyPressEvent(VirtualQDateEdit* self, QKeyEvent* event);
void QDateEdit_virtualbase_wheelEvent(VirtualQDateEdit* self, QWheelEvent* event);
void QDateEdit_virtualbase_focusInEvent(VirtualQDateEdit* self, QFocusEvent* event);
bool QDateEdit_virtualbase_focusNextPrevChild(VirtualQDateEdit* self, bool next);
int QDateEdit_virtualbase_validate(const VirtualQDateEdit* self, struct miqt_string input, int* pos);
void QDateEdit_virtualbase_fixup(const VirtualQDateEdit* self, struct miqt_string input);
QDateTime* QDateEdit_virtualbase_dateTimeFromText(const VirtualQDateEdit* self, struct miqt_string text);
struct miqt_string QDateEdit_virtualbase_textFromDateTime(const VirtualQDateEdit* self, QDateTime* dt);
int QDateEdit_virtualbase_stepEnabled(const VirtualQDateEdit* self);
void QDateEdit_virtualbase_mousePressEvent(VirtualQDateEdit* self, QMouseEvent* event);
void QDateEdit_virtualbase_paintEvent(VirtualQDateEdit* self, QPaintEvent* event);
void QDateEdit_virtualbase_initStyleOption(const VirtualQDateEdit* self, QStyleOptionSpinBox* option);
QSize* QDateEdit_virtualbase_minimumSizeHint(const VirtualQDateEdit* self);
QVariant* QDateEdit_virtualbase_inputMethodQuery(const VirtualQDateEdit* self, int param1);
void QDateEdit_virtualbase_resizeEvent(VirtualQDateEdit* self, QResizeEvent* event);
void QDateEdit_virtualbase_keyReleaseEvent(VirtualQDateEdit* self, QKeyEvent* event);
void QDateEdit_virtualbase_focusOutEvent(VirtualQDateEdit* self, QFocusEvent* event);
void QDateEdit_virtualbase_contextMenuEvent(VirtualQDateEdit* self, QContextMenuEvent* event);
void QDateEdit_virtualbase_changeEvent(VirtualQDateEdit* self, QEvent* event);
void QDateEdit_virtualbase_closeEvent(VirtualQDateEdit* self, QCloseEvent* event);
void QDateEdit_virtualbase_hideEvent(VirtualQDateEdit* self, QHideEvent* event);
void QDateEdit_virtualbase_mouseReleaseEvent(VirtualQDateEdit* self, QMouseEvent* event);
void QDateEdit_virtualbase_mouseMoveEvent(VirtualQDateEdit* self, QMouseEvent* event);
void QDateEdit_virtualbase_timerEvent(VirtualQDateEdit* self, QTimerEvent* event);
void QDateEdit_virtualbase_showEvent(VirtualQDateEdit* self, QShowEvent* event);
int QDateEdit_virtualbase_devType(const VirtualQDateEdit* self);
void QDateEdit_virtualbase_setVisible(VirtualQDateEdit* self, bool visible);
int QDateEdit_virtualbase_heightForWidth(const VirtualQDateEdit* self, int param1);
bool QDateEdit_virtualbase_hasHeightForWidth(const VirtualQDateEdit* self);
QPaintEngine* QDateEdit_virtualbase_paintEngine(const VirtualQDateEdit* self);
void QDateEdit_virtualbase_mouseDoubleClickEvent(VirtualQDateEdit* self, QMouseEvent* event);
void QDateEdit_virtualbase_enterEvent(VirtualQDateEdit* self, QEnterEvent* event);
void QDateEdit_virtualbase_leaveEvent(VirtualQDateEdit* self, QEvent* event);
void QDateEdit_virtualbase_moveEvent(VirtualQDateEdit* self, QMoveEvent* event);
void QDateEdit_virtualbase_tabletEvent(VirtualQDateEdit* self, QTabletEvent* event);
void QDateEdit_virtualbase_actionEvent(VirtualQDateEdit* self, QActionEvent* event);
void QDateEdit_virtualbase_dragEnterEvent(VirtualQDateEdit* self, QDragEnterEvent* event);
void QDateEdit_virtualbase_dragMoveEvent(VirtualQDateEdit* self, QDragMoveEvent* event);
void QDateEdit_virtualbase_dragLeaveEvent(VirtualQDateEdit* self, QDragLeaveEvent* event);
void QDateEdit_virtualbase_dropEvent(VirtualQDateEdit* self, QDropEvent* event);
bool QDateEdit_virtualbase_nativeEvent(VirtualQDateEdit* self, struct miqt_string eventType, void* message, intptr_t* result);
int QDateEdit_virtualbase_metric(const VirtualQDateEdit* self, int param1);
void QDateEdit_virtualbase_initPainter(const VirtualQDateEdit* self, QPainter* painter);
QPaintDevice* QDateEdit_virtualbase_redirected(const VirtualQDateEdit* self, QPoint* offset);
QPainter* QDateEdit_virtualbase_sharedPainter(const VirtualQDateEdit* self);